--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 
 .isDone {
-  font-weight: bold;
-  opacity: 0.5;
-  color: hotpink;
+  /*opacity: 0.5;*/
+  color: #f50057;
   text-decoration: line-through;
 }
 
