--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,26 @@
-
-.isDone {
-  /*opacity: 0.5;*/
-  color: #f50057;
-  text-decoration: line-through;
+/*
+.App {
+  padding: 30px;
+  display: flex;
 }
 
+.App > div {
+  margin-right: 50px;
+}
 
+.error {
+  border: red 1px solid;
+}
 
+.error-message {
+  color: red;
+}
+
+.active-filter {
+  background-color: aquamarine;
+}
+
+.is-done {
+  opacity: 0.5;
+}
+*/
